--- a/M4U1/transportes/frontend/public/index.html
+++ b/M4U1/transportes/frontend/public/index.html
@@ -25,10 +25,10 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <FontAwesomeIcon icon="fa-brands fa-linkedin" />
-    <FontAwesomeIcon icon="fa-brands fa-instagram-square" />
-    <FontAwesomeIcon icon="fa-brands fa-facebook-square" />
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <FontAwesomeIcon icon='fa-brands faLinkedin'/>
+    <FontAwesomeIcon icon= 'fa-brands faInstagram-square' />
+    <FontAwesomeIcon icon='fa-brands faFacebook-square' /> -->
     
     <title>React App</title>
   </head>
